k8s-rpi-apps-notea/04-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: notea-replaceprefix
  annotations:
    avp.kubernetes.io/path: "k8secrets/externalroutes"  
spec:
  replacePathRegex:
    regex: ^<noteapathprefix>/(.*)
    replacement: /$1
