k8s-rpi-apps-notea/02-notea.yaml
apiVersion: v1
kind: Service
metadata:
  name: notea
spec:
  ports:
  - port: 3000
  selector:
    app: notea
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notea
  template:
    metadata:
      labels:
        app: notea
    spec:
      containers:
        - name: notea
          image: 'docker.io/cinwell/notea:latest'
          ports:
            - name: notea-ui
              containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: 150m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: Recreate
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 600
