k8s-rpi-apps-notea/03-secured-ingress-external.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: notea-ingress-external
  annotations:
    kubernetes.io/ingress.class: traefik
    avp.kubernetes.io/path: "k8secrets/externalroutes"
spec:
  entryPoints:
    - websecure-external
  routes:
  - match: Host(`<externalhostname>`) && PathPrefix(`<noteapathprefix>`)
    kind: Rule
    services:
    - name: notea
      port: 3000
    middlewares:
      - name: notea-replaceprefix
  tls:
    certResolver: godaddy
